[package]
name = "wry_py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "wry_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
