[package]
name = "wry_py"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "wry_py"
crate-type = ["cdylib"]

[dependencies]
parking_lot = "0.12.5"
pyo3 = { version = "0.27.0", features = ["extension-module"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tao = "0.34.5"
wry = "0.53.5"
