[package]
name = "wry_py"
version = "0.1.0"
edition = "2024"
authors = ["Jacob Walton <jacob-walton@konpeki.co.uk"]
repository = "https://github.com/Jacob-Walton/wry_py"
license = "MIT"
description = "Python bindings for Wry/Tao"

[lib]
name = "wry_py"
crate-type = ["cdylib"]

[features]
default = []
gtk-backend = ["gtk", "libc"]

[dependencies]
parking_lot = "0.12.5"
pyo3 = { version = "0.27.0", features = ["extension-module"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tao = "0.34.5"
wry = "0.53.5"
gtk = { version = "0.18.2", optional = true }
libc = { version = "0.2", optional = true }
